updated time section

--- a/index.html
+++ b/index.html
@@ -46,12 +46,14 @@
     
     <main class="layout">
       <!-- Time -->
-      <section class="time">
-        <h1>Time</h1>
-        <time>
-          <data class="hours">HH</data> : <data class="minutes">MM</data> :
+      <section class="time top">
+        <time class="clock-container">
+          <data class="hours">HH</data> 
+          <data class="seperators"> : </data>
+          <data class="minutes">MM</data> 
+          <data class="seperators"> : </data>
           <data class="seconds">SS</data>
-          <data class="amOrPM">AM/PM</data>
+          <!-- <data class="amOrPM">AM/PM</data> -->
         </time>
       </section>
 
